# asimov-openai-module

./: CHANGES.md  Cargo.toml  README.md
.asimov/: module.yaml
src/: lib.rs  main.rs
src/prompter/: main.rs
